--- a/src/App.module.css
+++ b/src/App.module.css
@@ -59,9 +59,10 @@
 
 footer {
 	color: white;
+	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	font-size: small;
-	margin-top: 3px;
+	margin-top: 2px;
 }
 
 footer a {
