--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,36 @@
 .wrapper {
-	width: 450px;
-	position: fixed;
+	/* position: fixed;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%); */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.msg-copied {
+	position: fixed;
+	top: 0;
+	width: 100px;
+	text-align: center;
+	padding: 5px;
+	margin-top: 7px;	
+	background-color: whitesmoke;
+	border: 2px solid rgba(0, 0, 0, 0.75);
+	border-radius: 5px;
+	display: none;
+	/* box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.75);
+	-webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.75); */
 }
 
 .quote-container {
+	width: 400px;
 	border: 1px solid none;
 	border-radius: 5px;
-	padding: 27px 7% 20px 7%;
+	padding: 27px 25px 20px 25px;
 	background-color: whitesmoke;
 }
 
